Cleaned up scss, fixed mobile layout homepage, fixed navbar breakdown point, fixed footer on mobile

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -3,3 +3,13 @@
 
 $base-font-size: 10px;
 $navbar-height: 70px;
+$green: #83c057; /* green background */
+$black: #1E2028;
+$yellow: #FBCC3B;
+$grey: #333333;
+//potentially not used
+$light_grey: #F2F2F2;
+$dark_grey: #CCCCCC;
+$tag_grey: #808080;
+$red: #DB2C38;
+$blue: #00A0BE;
