--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,24 +16,25 @@
 
 // Include this here so the bootstrap variables that it contains are set before
 // we include bootstrap.
-@import "./variables";
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "./_variables";
 
 .page {
   padding-top: 70px;
+  width: 100%;
 }
-
-a:link {
-	color: white;
-}  
 
 a {
-	color: black;
-}
+  color: $black;
 
-a:hover {
-  text-decoration: underline;
+  &:link{
+    color: white;
+  }
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -63,11 +64,7 @@ a:hover {
   color: green;
 }
 
-.btn {
-  font-family: ArcherBold;
-}
-
-strong {
+.btn, strong {
   font-family: ArcherBold;
 }
 
